--- a/index.html
+++ b/index.html
@@ -34,9 +34,9 @@
       <a href="https://elisetienneco.wixsite.com/portfolio" class="navigation-item">Fashion</a>
     </div>
     
-    <img src="assets/images/cloud1.png" alt="Image 1" class="image image-1">
-    <img src="assets/images/cloud2.png" alt="Image 2" class="image image-2">
-    <img src="assets/images/cloud3.png" alt="Image 3" class="image image-3">
+    <img src="assets/images/cloud1.PNG" alt="Image 1" class="image image-1">
+    <img src="assets/images/cloud2.PNG" alt="Image 2" class="image image-2">
+    <img src="assets/images/cloud3.PNG" alt="Image 3" class="image image-3">
 
     <div class="intro">
       My name is Elise Carman. I am a software developer 
