--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                   
                 </div>
               </div>
-              <img src="assets/images/better-pink-guy.PNG" alt="card 3" class="card-3"/>
+              <img src="assets/images/better-pink-guy.png" alt="card 3" class="card-3"/>
           </div>
         </a>
         <div style="max-width: 300px;"></div>
