--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Elise Portfolio</title>
   <link rel="stylesheet" href="styles.css">  
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="icon" type="image/x-icon" href="favicon.png">
+  <link rel="icon" type="image/x-icon" href="/assets/images/favicon.png">
 </head>
 <body>
   <div class="section">
